--- a/projects/re-nextjs/styles/globals.css
+++ b/projects/re-nextjs/styles/globals.css
@@ -292,7 +292,9 @@ img {
   height: 100%;
   width: 100%;
 
-  opacity: 0.2;
+  /* opacity: 0.2; */
+  /* filter: brightness(0.2); */
+  /* filter: contrast(0.5); */
 
   background-position: center;
   background-repeat: no-repeat;
