--- a/projects/protfolio-threejs-nextjs/app/globals.css
+++ b/projects/protfolio-threejs-nextjs/app/globals.css
@@ -1809,10 +1809,50 @@ appearing places like @home/tech, @home/projects, @projects cards, @singleProjec
 
 
 
+/* ////////////////////////////////////////////////////////////////////////////// */
+/* custom components */
 
+.cst_dropDownMenu_fadeIn {
 
+  opacity: 0;
+  animation: cst_dropDownMenu_fadeIn 0.15s forwards linear;
+  transition: all 0.15s linear;
+}
 
+.cst_dropDownMenu_fadeOut {
 
+  animation: cst_dropDownMenu_fadeOut 0.2s forwards linear;
+  transition: all 0.2s linear;
+}
+
+@keyframes cst_dropDownMenu_fadeIn {
+
+  from {
+      opacity: 0;
+      height: 0px;
+  }
+  to {
+      opacity: 1;
+      height: auto;
+  }
+}
+
+@keyframes cst_dropDownMenu_fadeOut {
+
+  from {
+    opacity: 1;
+    height: auto;
+  }
+  to {
+    opacity: 0;
+    height: 0px;
+  }
+}
+
+.cst_dropDownMenu_rotate180 {
+  rotate: 180deg;
+  top: 34%;
+}
 
 
 /* ////////////////////////////////////////////////////////////////////////////// */
