--- a/projects/protfolio-threejs-nextjs/app/globals.css
+++ b/projects/protfolio-threejs-nextjs/app/globals.css
@@ -1833,10 +1833,12 @@ appearing places like @home/tech, @home/projects, @projects cards, @singleProjec
 }
 
 
-
+/* ////////////////////////////////////////////////////////////////////////////// */
+/* ////////////////////////////////////////////////////////////////////////////// */
 /* ////////////////////////////////////////////////////////////////////////////// */
 /* custom components */
 
+/* drop down menu*/
 .cst_dropDownMenu_fadeIn {
 
   opacity: 0;
@@ -1878,6 +1880,53 @@ appearing places like @home/tech, @home/projects, @projects cards, @singleProjec
   rotate: 180deg;
   top: 34%;
 }
+
+/* ////////////////////////////////////////////////////////////////////////////// */
+/* circle progress bar*/
+[role="progressbar"] {
+  --size: 132px;
+  --bar-width: 20px;
+
+  font-size: 2rem;
+  width: var(--size);
+  aspect-ratio: 1 / 1;
+
+  background-color: blue;
+  margin: 2rem auto;
+  border-radius: 50%;
+
+  display: grid;
+  place-items: center;
+}
+
+[role="progressbar"] span {
+  display: none;
+}
+
+
+/* if javascript is disabled */
+.progressbar:not([role="progressbar"]) {
+  color: red;
+}
+
+[role="progressbar"]::after {
+  content: attr(aria-valuenow) "%"; /*as we did place aria using js we can use it here*/
+  background: white;
+  border-radius: inherit;
+  width: calc(100% - var(--bar-width)); /**/
+  aspect-ratio: 1/ 1; /**/
+  color: black;
+
+  display: grid;  /*for posedo set display! or position */
+  place-items: center;
+}
+
+.progressbarCircle_testing-ground button {
+  padding: 0 0.5rem;
+  border: 1px solid white;
+  border-radius: 99px;
+}
+
 
 
 /* ////////////////////////////////////////////////////////////////////////////// */
