--- a/projects/protfolio-threejs-nextjs/app/globals.css
+++ b/projects/protfolio-threejs-nextjs/app/globals.css
@@ -936,7 +936,7 @@ used in the single project page project's description text */
 
 @media (orientation:landscape) {
   #contact__form__container {
-    max-width: 650px;
+    /* max-width: 650px; */
   }
 }
 
