--- a/projects/protfolio-threejs-nextjs/app/globals.css
+++ b/projects/protfolio-threejs-nextjs/app/globals.css
@@ -819,6 +819,57 @@ and turn it to a transparent icon image with a gray semi transparent background 
 
 }
 
+.scaleVertical {
+  animation: 2s scaleVertical ease-out forwards;
+  height: 200px;
+}
+
+@keyframes scaleVertical {
+  from {height: 1px;}
+  to {height: 200px;}
+}
+
+.scaleVerticalOut {
+  animation: 2s scaleVerticalOut ease-out forwards;
+  height: 1px;
+}
+
+@keyframes scaleVerticalOut {
+  from {height: 200px;}
+  to {height: 1px;}
+}
+
+.fadeIn_animation2 {
+  animation-name: fadeIn_keyframe2;
+  animation-duration: 2s;
+  animation-timing-function: linear;
+  animation-fill-mode: forwards;
+}
+
+@keyframes fadeIn_keyframe2 {
+  0% { 
+    opacity: 0;
+  }
+  100% {
+    opacity: 1;
+  }
+}
+
+.fadeOut_animation2 {
+  animation-name: fadeOut_keyframe2;
+  animation-duration: 4s;
+  animation-timing-function: linear;
+  animation-fill-mode: forwards;
+}
+
+@keyframes fadeOut_keyframe2 {
+  0% { 
+    opacity: 1;
+  }
+  100% {
+    opacity: 0;
+  }
+}
 
 
 /* ////////////////////////////////////////////////////////////////////////////// */
