--- a/projects/protfolio-threejs-nextjs/app/globals.css
+++ b/projects/protfolio-threejs-nextjs/app/globals.css
@@ -1630,6 +1630,40 @@ appearing places like @home/tech, @home/projects, @projects cards, @singleProjec
 
 }
 
+.SQL_bg {
+  /* background: -webkit-linear-gradient(#eee, #333); */
+  background: #000000; /* fallback for old browsers */
+  background: -webkit-linear-gradient(
+    to right, rgba(0,121,214, 0.15), rgba(0,121,214, 0.08)
+  ); 
+  /* Chrome 10-25, Safari 5.1-6 */
+  background: linear-gradient(
+    to right, rgba(0,121,214, 0.15), rgba(0,121,214, 0.08)
+  ); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+
+  border-color: rgba(0,121,214, 0.21);
+  
+  gap:0.25rem;
+
+
+}
+
+.SQL_text {
+  /* background: -webkit-linear-gradient(#eee, #333); */
+  background: #ffff; /* fallback for old browsers */
+  background: -webkit-linear-gradient(
+    to right, rgba(0,121,214, 1), rgba(0,121,214, 0.65)
+  ); 
+  /* Chrome 10-25, Safari 5.1-6 */
+  background: linear-gradient(
+    to right, rgb(0,121,214), rgba(0,121,214, 0.75)
+  ); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+
+}
+
 .ReactJS_bg {
   /* background: -webkit-linear-gradient(#eee, #333); */
   background: #000000; /* fallback for old browsers */
@@ -1811,6 +1845,38 @@ appearing places like @home/tech, @home/projects, @projects cards, @singleProjec
   /* Chrome 10-25, Safari 5.1-6 */
   background: linear-gradient(
     to right, rgba(220,0,116, 0.65), rgba(220,0,116, 0.42)
+  ); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+
+}
+
+.Figma_bg {
+  /* background: -webkit-linear-gradient(#eee, #333); */
+  background: #000000; /* fallback for old browsers */
+  background: -webkit-linear-gradient(
+    to right, rgba(242,78,30, 0.1), rgba(242,78,30, 0.08)
+  ); 
+  /* Chrome 10-25, Safari 5.1-6 */
+  background: linear-gradient(
+    to right, rgba(242,78,30, 0.1), rgba(242,78,30, 0.08)
+  ); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+
+  border-color: rgba(242,78,30, 0.1);
+  
+
+}
+
+.Figma_text {
+  /* background: -webkit-linear-gradient(#eee, #333); */
+  background: #ffff; /* fallback for old browsers */
+  background: -webkit-linear-gradient(
+    to right, rgba(107, 201, 134, 0.75), rgba(107, 201, 134, 0.4)
+  ); 
+  /* Chrome 10-25, Safari 5.1-6 */
+  background: linear-gradient(
+    to right, rgba(255,114,98, 0.65), rgba(255,114,98, 0.42)
   ); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
 
   -webkit-background-clip: text;
